<resources>
    <string name="app_name">GreenPlant</string>
    <string name="bienvenida">Welcome to GreenPlant!</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo_greenplant">Logo GreenPlant</string>
    <string name="correo">Ingrese su Correo Electronico</string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="apellido">Ingrese su Apellido</string>
    <string name="contrasenia">Ingrese su Contraseña</string>
    <string name="accion">¿Que acción deseas realizar?</string>
    <string name="aniadir">Añadir una Planta</string>
    <string name="verPlantas">Ver mis Plantas</string>
</resources>
