<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="579dp"
        android:layout_height="861dp"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_green" />

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="296dp"
        android:layout_height="86dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hapticFeedbackEnabled="true"
        android:hint="Correo Electronico"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hapticFeedbackEnabled="true"
        android:hint="Correo Electronico"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShow" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hapticFeedbackEnabled="true"
        android:hint="Apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="-400dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/etApellido" />

    <Button
        android:id="@+id/btnAniadir"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="-150dp"
        android:onClick="enviarDatos"
        android:text="@string/registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>