<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuSeleccion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="741dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_green" />

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="296dp"
        android:layout_height="86dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="58dp"
        android:text="@string/accion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMisPlantas"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="131dp"
        android:background="#3AACF7"
        android:backgroundTint="#EF3434"
        android:onClick="verMisPlantas"
        android:text="@string/verPlantas"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnAniadir"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="305dp"
        android:background="#1AE824"
        android:onClick="aniadirPlanta"
        android:text="@string/aniadir"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>